Added UI elements

--- a/src/adwcn6checkers/FXMLCheckersBoard.fxml
+++ b/src/adwcn6checkers/FXMLCheckersBoard.fxml
@@ -6,9 +6,25 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" fx:controller="adwcn6checkers.FXMLCheckersBoardController">
-    <children>
-        <Button layoutX="126" layoutY="90" text="Click Me!" onAction="#handleButtonAction" fx:id="button" />
-        <Label layoutX="126" layoutY="120" minHeight="16" minWidth="69" fx:id="label" />
-    </children>
-</AnchorPane>
+<VBox fx:id="vBox" prefHeight="579.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="adwcn6checkers.FXMLCheckersBoardController">
+   <children>
+      <MenuBar fx:id="menuBar" prefHeight="29.0" prefWidth="519.0">
+         <menus>
+            <Menu fx:id="gridMenu" mnemonicParsing="false" text="Grid">
+               <items>
+                  <MenuItem fx:id="size16MenuItem" mnemonicParsing="false" onAction="#handleSize16MenuItemClick" text="16 x 16" />
+                  <MenuItem fx:id="size10MenuItem" mnemonicParsing="false" onAction="#handleSize10MenuItemClick" text="10 x 10" />
+                  <MenuItem fx:id="size8MenuItem" mnemonicParsing="false" onAction="#handleSize8MenuItemClick" text="8 x 8" />
+                  <MenuItem fx:id="size3MenuItem" mnemonicParsing="false" onAction="#handleSize3MenuItemClick" text="3 x 3" />
+               </items>
+            </Menu>
+            <Menu id="colorsMenu" fx:id="colorsMenu" mnemonicParsing="false" text="Colors">
+               <items>
+                  <MenuItem fx:id="defaultMenuItem" mnemonicParsing="false" onAction="#handleDefaultMenuItemClick" text="Default" />
+                  <MenuItem fx:id="blueMenuItem" mnemonicParsing="false" onAction="#handleBlueMenuItemClick" text="Blue" />
+               </items>
+            </Menu>
+         </menus>
+      </MenuBar>
+   </children>
+</VBox>
