--- a/src/adwcn6checkers/FXMLCheckersBoard.fxml
+++ b/src/adwcn6checkers/FXMLCheckersBoard.fxml
@@ -12,16 +12,16 @@
          <menus>
             <Menu fx:id="gridMenu" mnemonicParsing="false" text="Grid">
                <items>
-                  <MenuItem fx:id="size16MenuItem" mnemonicParsing="false" onAction="#handleSize16MenuItemClick" text="16 x 16" />
-                  <MenuItem fx:id="size10MenuItem" mnemonicParsing="false" onAction="#handleSize10MenuItemClick" text="10 x 10" />
-                  <MenuItem fx:id="size8MenuItem" mnemonicParsing="false" onAction="#handleSize8MenuItemClick" text="8 x 8" />
-                  <MenuItem fx:id="size3MenuItem" mnemonicParsing="false" onAction="#handleSize3MenuItemClick" text="3 x 3" />
+                  <MenuItem fx:id="size16MenuItem" mnemonicParsing="false" onAction="#changeSize" text="16 x 16" />
+                  <MenuItem fx:id="size10MenuItem" mnemonicParsing="false" onAction="#changeSize" text="10 x 10" />
+                  <MenuItem fx:id="size8MenuItem" mnemonicParsing="false" onAction="#changeSize" text="8 x 8" />
+                  <MenuItem fx:id="size3MenuItem" mnemonicParsing="false" onAction="#changeSize" text="3 x 3" />
                </items>
             </Menu>
             <Menu id="colorsMenu" fx:id="colorsMenu" mnemonicParsing="false" text="Colors">
                <items>
-                  <MenuItem fx:id="defaultMenuItem" mnemonicParsing="false" onAction="#handleDefaultMenuItemClick" text="Default" />
-                  <MenuItem fx:id="blueMenuItem" mnemonicParsing="false" onAction="#handleBlueMenuItemClick" text="Blue" />
+                  <MenuItem fx:id="defaultMenuItem" mnemonicParsing="false" onAction="#changeColor" text="Default" />
+                  <MenuItem fx:id="blueMenuItem" mnemonicParsing="false" onAction="#changeColor" text="Blue" />
                </items>
             </Menu>
          </menus>
