Added gameboard centering functionality

--- a/src/adwcn6checkers/FXMLCheckersBoard.fxml
+++ b/src/adwcn6checkers/FXMLCheckersBoard.fxml
@@ -26,6 +26,8 @@
             </Menu>
          </menus>
       </MenuBar>
-      <AnchorPane fx:id="anchorPane" VBox.vgrow="ALWAYS" />
+      <VBox fx:id="vBoxDisplayArea">
+        <AnchorPane fx:id="anchorPane" VBox.vgrow="ALWAYS" />
+      </VBox>
    </children>
 </VBox>
